<resources>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="warning_sdcard_unmounted">无法安装，请检查SD卡状态</string>
    <string name="tag_topic_label_id">TAG_Topic_LabelId</string>
    <string name="tag_topic_label_name">TAG_Topic_LabelName</string>
    <string name="tag_topic_label_wid">TAG_Topic_LabelWid</string>
    <string name="action_fastscroll">Fast scroll</string>
    <string name="action_addpadding">Add padding</string>
    <string name="action_showShadow">Show shadow</string>
    <string name="action_showHeaderAndFooter">Show Header &amp; Footer</string>
    <string name="pinned_type">Pinned_Type</string>
    <string name="pinned_object">Pinned_Object</string>
    <string name="tab1_tag">Tab1_Tag</string>
    <string name="tab2_tag">Tab2_Tag</string>
    <string name="direct_experience">立即体验</string>
    <string name="top_register">注册</string>
    <string name="top_baibian">百变</string>
    <string name="top_discover">发现</string>
    <string name="top_model">模特</string>
    <string name="formal_invironment_url_head">http://api.choumei.cn/</string>
    <string name="zone_base_section_tab_alltopics">全部话题</string>
    <string name="zone_base_section_tab_essential_topics">精华</string>
    <string name="zone_section_faxingzixun">发型咨询</string>
    <string name="zone_section_bianfaclass">发型DIY</string>
    <string name="zone_section_caizhuanghufu">彩妆控</string>
    <string name="zone_section_qinggantiandi">闺蜜说</string>
    <string name="zone_section_five">鸡毛蒜皮</string>
    <string name="zone_section_six">八卦天地</string>
    <string name="zone_section_fankuitucao">求吐槽</string>
    <string name="main_choumeibang">最美帮</string>
    <string name="main_hairscan">寻找美</string>
    <string name="main_discover">发现</string>
    <string name="main_me">我</string>
    <string name="my_title">我</string>
    <string name="my_message">我的消息</string>
    <string name="my_attention">我的关注</string>
    <string name="my_topic">我的话题</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_diagnose">发型诊断</string>
    <string name="my_hairtry_history">发型试戴历史</string>
    <string name="my_hair_album">我的发型相册</string>
    <string name="setting_person_info_title">个人信息</string>
    <string name="userinfo_username">"用户名：  "</string>
    <string name="userinfo_choumei_name">"最美号：  "</string>
    <string name="userinfo_nickname">"昵称：  "</string>
    <string name="userinfo_gender">性别</string>
    <string name="userinfo_birthday">生日</string>
    <string name="userinfo_address">地区</string>
    <string name="city_choose_area">选择地区</string>
    <string name="userinfo_gender_hint">未知</string>
    <string name="userinfo_birthday_hint">生日是什么时候</string>
    <string name="userinfo_city_hint">请选择城市</string>
    <string name="my_hair_style_title">我的发型风格</string>
    <string name="my_collection_topics">话题</string>
    <string name="my_collection_hair">发型</string>
    <string name="my_setting">设置</string>
    <string name="message">消息</string>
    <string name="setting_attention_wx_title">关注最美发型</string>
    <string name="setting_binder_title">绑定设置</string>
    <string name="setting_feedback_title">意见反馈</string>
    <string name="top_popularity_rank">人气榜</string>
    <string name="top_jifen_rank">积分榜</string>
    <string name="hair_today">今天</string>
    <string name="hair_yesteday">昨天</string>
    <string name="login_hint1">创建最美发型帐号</string>
    <string name="login_hint2">关注、收藏、分享</string>
    <string name="login_hint3">时尚美发和寻找属于你的发型风格</string>
    <string name="login_username">邮箱/手机号/用户名</string>
    <string name="login">登录</string>
    <string name="login_to_register">注册新用户</string>
    <string name="login_with_another">用以下方式互联登录</string>
    <string name="register_email">邮箱</string>
    <string name="register_nickname">昵称</string>
    <string name="register_phone">手机号</string>
    <string name="register_password">密码</string>
    <string name="setting_share_to_wechat">推荐给微信好友</string>
    <string name="setting_give_like">给最美发型好评</string>
    <string name="setting_version_check">版本检测</string>
    <string name="setting_clear_cache">清理本地缓存</string>
    <string name="setting_logout">退出登录</string>
    <string name="bind_title">第三方绑定</string>
    <string name="bind_weibo">绑定新浪微博</string>
    <string name="bind_tencent_weibo">绑定腾讯微博</string>
    <string name="bind_qzone">绑定QQ</string>
    <string name="bind_cancel">解除授权</string>
    <string name="attention_cm_save_photo">保存二维码到手机相册</string>
    <string name="modify_pw_old_password">当前密码</string>
    <string name="modify_pw_new_password">新密码</string>
    <string name="modify_pw_repeat_password">确认密码</string>
    <string name="setting_change_password_title">修改密码</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="poster_url">Image Url</string>
    <string name="poster_desc">Poster Desc</string>
    <string name="poster_collnum">Poster CollNum</string>
    <string name="poster_group_id">Poster Group Id</string>
    <string name="poster_colltag">Poster CollTag</string>
    <string name="poster_collectIv">Poster CollectIv</string>
    <string name="poster_collectNumTv">Poster CollectNumTv</string>
    <string name="poster_name">Poster NameTv</string>
    <string name="poster_entity">Poster Entity</string>
    <string name="poster_img_ll_tag">LinearLayout Tag</string>
    <string name="contact_label">联系方式:</string>
    <string name="feedback_label">意见反馈:</string>
    <string name="paizhao">拍照</string>
    <string name="get_photo_choose">从手机相册选取</string>
    <string name="send">发送</string>
    <string name="localphoto">本地相册</string>
    <string name="camera">相         机</string>
    <string name="cancle">取         消</string>
    <string name="content_feedback">请输入您的建议</string>
    <string name="content_feedback_contact">请填写QQ或手机号码，方便我们与您取得联系</string>
    <string name="zone_notice">公告区</string>
    <string name="zone_good">精华区</string>
    <string name="zone_hot">人气榜</string>
    <string name="zone_score">积分榜</string>
    <string name="find_recomm_tag_text">推荐</string>
    <string name="find_new_tag_text">最新</string>
    <string name="find_main_topic_tag_text">专题</string>
</resources>